--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>vue</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <!--<vue-toastr v-ref:toastr></vue-toastr>-->
+    <vue-toastr v-ref:toastr></vue-toastr>
 </head>
 
 <body>
